update poker exercise