@@ -1,7 +1,5 @@
+import java.util.Comparator;
 import java.util.List;
-
-import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toUnmodifiableList;
 
 public final class Poker {
 
@@ -10,15 +8,15 @@ public final class Poker {
     public Poker(List<String> hands) {
         this.hands = hands.stream()
                 .map(Hand::new)
-                .sorted((comparing(Hand::getValue)))
-                .collect(toUnmodifiableList());
+                .sorted(Comparator.comparing(Hand::getValue))
+                .toList();
     }
 
     public List<String> getBestHands() {
-        final var bestValue = hands.get(0).getValue();
+        var bestValue = hands.getFirst().getValue();
         return hands.stream()
-                .takeWhile(hand -> hand.getValue().equals(bestValue))
+                .filter(hand -> hand.getValue().equals(bestValue))
                 .map(Hand::toString)
-                .collect(toUnmodifiableList());
+                .toList();
     }
 }
